--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+cglenv/
 
 # Spyder project settings
 .spyderproject
@@ -150,3 +151,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+#note exception
+note.txt
